modified jobs sections

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="main-nav">
   <div class="main-nav-inner">
-    <!-- <img src="#" class="main-logo" /> -->
+    <img src="#" />
     <ul>
       <li><a href="#">HOME</a></li>
       <li><a href="#">ABOUT</a></li>
